...
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController title="Me" id="9pv-A4-QxB" customClass="MeViewController" customModule="MeetUpGroup" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
...
                                </variation>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v65-1x-720">
                                <rect key="frame" x="20" y="145.5" width="45" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Me" id="z4U-xQ-alr">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="8Zf-7h-5bd">
                            <connections>
                                <action selector="editProfile:" destination="9pv-A4-QxB" id="BFw-GP-kPL"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type in an email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e9V-At-gRu">
                                <rect key="frame" x="112.5" y="112.5" width="467.5" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type in your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="or1-3r-d6u">
                                <rect key="frame" x="112.5" y="196.5" width="467.5" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MeetUp Group" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgF-ud-qxt">
                                <rect key="frame" x="67" y="52" width="467.5" height="20.5"/>
                                <color key="backgroundColor" red="0.9343434343" green="0.86720212870000002" blue="0.26546944960000002" alpha="1" colorSpace="calibratedRGB"/>
...
                                <color key="backgroundColor" red="0.9343434343" green="0.86720212870000002" blue="0.26546944960000002" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.90404040399999996" green="0.1133302231" blue="0.63557649000000005" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfk-M4-ZGa">
                                <rect key="frame" x="20" y="201" width="78.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
